// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when isContextualSearchPending matches snapshot, renders LoadingBarContent 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="header"
      data-testid="page-header-container"
    >
      <h1
        class="title"
      >
        pageTitle
      </h1>
      <div
        class="form"
      >
        <form
          class="form"
          novalidate=""
        >
          <div
            aria-invalid="false"
            class="desktopContainer StyledTextInput-sc-1ezxcjx-0-div text__c-txt__input___38pRd text__is-focused___26DQb kFNGHY"
            data-garden-id="forms.faux_input"
            data-garden-version="6.4.4"
          >
            <label
              class="label StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
              data-garden-id="forms.text_label"
              data-garden-version="6.4.4"
              for="garden-field-container-2--input"
              id="garden-field-container-2--label"
            >
              How can we help?
            </label>
            <input
              aria-describedby="garden-field-container-2--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-2--label"
              autocapitalize="off"
              class="searchInput StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV icTNBi"
              data-garden-id="forms.input"
              data-garden-version="6.4.4"
              data-testid="search-field"
              id="garden-field-container-2--input"
              placeholder="How can we help?"
              type="search"
              value=""
            />
            <div
              class="desktopSearchOrLoading"
            >
              <span
                class="icon focused notFocused"
                data-testid="Icon--search"
                role="button"
                tabindex="0"
              >
                <svg
                  realfilename="search.svg"
                />
              </span>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="container"
      >
        <div
          class="barWidth30Percent"
        />
        <div
          class="barWidth90Percent"
        />
        <div
          class="barWidth90Percent"
        />
        <div
          class="barWidth90Percent"
        />
        <div
          class="barWidth70Percent"
        />
      </div>
    </div>
    <footer
      class="footer footerShadow"
    >
      <div
        class="footerContentMultiple"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
        <div
          class="container containerDesktop"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              Leave us a message
            </button>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`render when not isContextualSearchPending matches snapshot, renders NoResults 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="header"
      data-testid="page-header-container"
    >
      <h1
        class="title"
      >
        pageTitle
      </h1>
      <div
        class="form"
      >
        <form
          class="form"
          novalidate=""
        >
          <div
            aria-invalid="false"
            class="desktopContainer StyledTextInput-sc-1ezxcjx-0-div text__c-txt__input___38pRd text__is-focused___26DQb kFNGHY"
            data-garden-id="forms.faux_input"
            data-garden-version="6.4.4"
          >
            <label
              class="label StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
              data-garden-id="forms.text_label"
              data-garden-version="6.4.4"
              for="garden-field-container-0--input"
              id="garden-field-container-0--label"
            >
              How can we help?
            </label>
            <input
              aria-describedby="garden-field-container-0--hint"
              aria-invalid="false"
              aria-labelledby="garden-field-container-0--label"
              autocapitalize="off"
              class="searchInput StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd text__c-txt__input--bare___wp3DV icTNBi"
              data-garden-id="forms.input"
              data-garden-version="6.4.4"
              data-testid="search-field"
              id="garden-field-container-0--input"
              placeholder="How can we help?"
              type="search"
              value=""
            />
            <div
              class="desktopSearchOrLoading"
            >
              <span
                class="icon focused notFocused"
                data-testid="Icon--search"
                role="button"
                tabindex="0"
              >
                <svg
                  realfilename="search.svg"
                />
              </span>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="noResults noResultsDesktop"
      >
        <p
          class="title"
        >
          There are no results for ""
        </p>
        <p
          class="noResultsParagraph noResultsParagraphDesktop"
        >
          Try searching for something else.
        </p>
      </div>
    </div>
    <footer
      class="footer footerShadow"
    >
      <div
        class="footerContentMultiple"
      >
        <a
          class="icon"
          data-testid="Icon--zendesk"
          href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
          tabindex="-1"
          target="_blank"
        >
          <svg
            realfilename="widget-icon_zendesk.svg"
            title="zendesk"
          />
        </a>
        <div
          class="container containerDesktop"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              Leave us a message
            </button>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
